--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
     <body>
 
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <p>Hello world! This is GDMA3222 Project 1.</p>
 
         <script src="js/main.js"></script>
     </body>
