--- a/index.html
+++ b/index.html
@@ -1,21 +1,47 @@
 <!doctype html>
 <html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title></title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Lobster|PT+Sans" rel="stylesheet">  <link rel="stylesheet" href="css/normalize.min.css">
+  <link rel="stylesheet" href="css/main.css">
 
-        <link rel="stylesheet" href="css/normalize.min.css">
-        <link rel="stylesheet" href="css/main.css">
-
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-    </head>
-    <body>
-
-        <p>Hello world! This is GDMA3222 Project 1.</p>
-
-        <script src="js/main.js"></script>
-    </body>
+  <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+</head>
+<body>
+  <header class="banner">
+    <a href="index.html" class="brand">Museum of GDMA</a>
+    <nav class="main-nav">
+      <ul>
+        <li>
+          <a href="index.html">Home</a>
+        </li>
+        <li>
+          <a href="about.html">About Us</a>
+        </li>
+        <li>
+          <a href="contact.html">Contact Us</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <main class="content">
+    <h1>Project 1</h1>
+    <p>Hello world! This is GDMA3222 Project 1.</p>
+    <iframe
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2603.0358343951934!2d-123.14613755769275!3d49.275718203449806!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5486723337b3941d%3A0x96132a57ebac6bce!2sMuseum+of+Vancouver!5e0!3m2!1sen!2sca!4v1485206692183"
+    class="google-map"
+    frameborder="0"
+    style="border:0"
+    allowfullscreen></iframe>
+  </main>
+  <footer class="extra-info">
+    Copyright 2017
+    <a href="mailto:cameron.cavers@kpu.ca">Contact Us!</a>
+  </footer>
+  <script src="js/main.js"></script>
+</body>
 </html>
