--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <header class="banner">
-    <a href="index.html" class="brand">Museum of GDMA</a>
+    <a href="index.html" class="brand"><img src="img/logo.svg"></a> 
     <nav class="main-nav">
       <ul>
         <li>
