--- a/links.html
+++ b/links.html
@@ -7,17 +7,19 @@
 </head>
 <body>
   <h1>Project 1:</h1>
-  <a href="https://github.com/nbutner/Coding-2017-project-1---Nicola-Butner">Nicola</a>
-<a href="https://brandonophus.github.io/3222project1">Brandon</a>
-<a href="https://rosierg.github.io/Project-1/index.html">Rosie</a>
-<a href="https://kellylinharris.github.io/">Kelly-Lin</a>
-<a href="https://cindykpu.github.io/3122-P1/">Cindy</a>
-<a href="https://hhalldorson.github.io/">Hillary</a>
-<a href="https://kylenyuan.github.io/GDMA3222Project1/">Clover</a>
-<a href="https://stefanietokarchuk.github.io/3222-Prj1/index.html">Stefanie</a>
-<a href="https://dustinmatos.github.io/">Dustin</a>
-<a href="https://ethansz.github.io/3222prj1/">Ethan</a>
-<a href="https://kenzgooch.github.io/project1/">Mackenzie</a>
-<a href="https://melissamarlainelee.github.io/project1/">Melissa</a>
+  <h2>
+  <a href="https://github.com/nbutner/Coding-2017-project-1---Nicola-Butner">Nicola</a><br>
+<a href="https://brandonophus.github.io/3222project1">Brandon</a><br>
+<a href="https://rosierg.github.io/Project-1/index.html">Rosie</a><br>
+<a href="https://kellylinharris.github.io/">Kelly-Lin</a><br>
+<a href="https://cindykpu.github.io/3122-P1/">Cindy</a><br>
+<a href="https://hhalldorson.github.io/">Hillary</a><br>
+<a href="https://kylenyuan.github.io/GDMA3222Project1/">Clover</a><br>
+<a href="https://stefanietokarchuk.github.io/3222-Prj1/index.html">Stefanie</a><br>
+<a href="https://dustinmatos.github.io/">Dustin</a><br>
+<a href="https://ethansz.github.io/3222prj1/">Ethan</a><br>
+<a href="https://kenzgooch.github.io/project1/">Mackenzie</a><br>
+<a href="https://melissamarlainelee.github.io/project1/">Melissa</a><br>
+  </h2>
 </body>
 </html>
