--- a/links.html
+++ b/links.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>Document</title>
 </head>
-<body>
+<body style="font-family: Helvetica">
   <h1>Project 1:</h1>
   <h2>
   <a href="https://github.com/nbutner/Coding-2017-project-1---Nicola-Butner">Nicola</a><br>
@@ -20,6 +20,7 @@
 <a href="https://ethansz.github.io/3222prj1/">Ethan</a><br>
 <a href="https://kenzgooch.github.io/project1/">Mackenzie</a><br>
 <a href="https://melissamarlainelee.github.io/project1/">Melissa</a><br>
+    <a href="https://njenkins9.github.io/Project-1/Zoo-Website.html">Natasha</a>
   </h2>
 </body>
 </html>
